configuration de l'arborescense du projet et de la configuration du fichier application.propreties.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,28 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_users?serverTimezone=UTC
+#Configuration pour une base de données PostgreSQL
+spring.application.name=api
+
+server.port=9090
+
+logging.level.root=error
+logging.level.org.sid=info
+#logging.level.org.springframework.boot.autoconfigure.h2=info
+logging.level.org.springframework.boot.web.embedded.tomcat=info
+
+#Configuration pour une BD MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/location_vehicule
 spring.datasource.username=root
-spring.datasource.password=rootuse
+spring.datasource.password=hama1005!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.show-sql=true
+
+#Configuration pour une BD Postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5432/location_vehicule
+#spring.datasource.username=postgres
+#spring.datasource.password=passer123
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.database-platform=org.hibernate.dialect.PostgreSQL82Dialect
