--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -11,12 +11,12 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 #Configuration pour une BD MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/location_vehicule
 spring.datasource.username=root
-spring.datasource.password=hama1005!
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 
