--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -12,6 +12,9 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 spring.datasource.url=jdbc:mysql://localhost:3306/location_vehicule
 spring.datasource.username=root
 spring.datasource.password=hama1005!
+#spring.datasource.url=jdbc:mysql://localhost:3308/location_vehicule
+#spring.datasource.username=root
+#spring.datasource.password=rootuse
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
