--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -11,11 +11,7 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 #Configuration pour une BD MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/location_vehicule
 spring.datasource.username=root
-spring.datasource.password=hama1005!
-#spring.datasource.url=jdbc:mysql://localhost:3308/location_vehicule
-#spring.datasource.username=root
-#spring.datasource.password=rootuse
-
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
