--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -9,9 +9,9 @@ logging.level.org.sid=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 
 #Configuration pour une BD MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/location_vehicule
+spring.datasource.url=jdbc:mysql://localhost:3308/location_vehicule
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=rootuse
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
